fix: scrollbar e animação bola fix

--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -3,13 +3,16 @@
   height:15rem;
   width: 15rem;
   z-index: -20;
+  position: absolute;
+  top: 0;
+  left: 0;
   background: 
   radial-gradient(ellipse at top,rgb(var(--grey), 0.6), transparent),
   radial-gradient(ellipse at bottom,rgb(0, 64, 89, 0.8), transparent),
   linear-gradient(to left, transparent, rgb(var(--blue))),
   linear-gradient(to right, transparent, rgba(var(--blue),0.8) );
-  animation: moveBall 40s linear infinite reverse;
-  offset-path: path("M 1917.7607,198.91682 C 1674.6224,9.1781432 1229.3753,199.29504 1300.6682,451.89663 1372.0814,659.70613 1165.0498,818.46901 976.40522,800.73729 729.11129,720.47278 610.32918,440.21236 312.14278,467.55958 102.25623,466.50069 -201.82443,468.72992 -270.80571,244.89165 -298.28779,3.4107662 72.59836,-50.85694 271.29812,81.068262 434.50521,226.02809 706.41032,312.87267 898.78203,199.77417 1119.379,78.257542 1418.3602,-90.975363 1723.5927,-30.588104 c 116.6832,23.6044502 215.6315,129.5635 181.4915,239.605044");
+  animation: moveBall 55s linear infinite;
+  offset-path: path("M 1514.2372,114.97853 C 1385.4141,66.075095 1099.1478,70.096161 1172.9914,279.1328 1255.57,466.92394 1071.5036,634.16109 933.75622,542.4013 777.86247,468.17679 740.29906,126.19932 533.43851,222.92004 318.13224,342.13216 521.30464,685.03321 701.31526,661.46303 928.40591,618.5457 1075.4461,477.89275 999.44804,251.63303 918.9232,-48.643452 462.52334,94.890077 291.95024,286.98838 130.67896,442.3952 167.69564,612.39163 333.34749,804.35568 468.11346,981.64391 717.54356,1012.9595 862.15958,835.74995 1019.5526,687.65918 1238.7413,557.75138 1429.9091,686.73013 1609.5826,828.55483 1497.1784,1153.4089 1302.1007,1225.0686 1107.9948,1261.5542 951.14622,1089.8906 838.348,917.33038 765.9731,786.21257 649.69489,722.79288 524.23633,710.27699 369.22538,683.26269 173.01405,712.80462 82.781439,889.42049 28.812202,1059.7915 165.0684,1201.7829 287.02433,1238.8966 c 183.91742,77.3557 392.32751,37.7658 584.0719,34.3514 299.66297,-28.9469 161.19147,-302.07859 2.78369,-374.31449 C 756.97315,824.49609 560.05149,702.84267 622.75293,503.77277 c 76.75408,-133.5769 202.35246,-101.00898 349.63861,-87.93108 152.75296,9.68268 433.03796,151.52602 529.74976,-8.05125 45.2522,-53.22958 16.4694,-208.76624 12.0959,-292.81191 z");
 }
 
 @keyframes moveBall {
@@ -250,7 +253,7 @@
 
 .stacks_container {
   border-radius: 5.5rem;
-  margin-bottom: 12em;
+  margin-bottom: 18em;
   margin-left: 15vw;
   margin-top: -3.5%;
   padding: 1em;
